postgres and additional routes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,29 @@ services:
       - .:/app
     ports:
       - 8080:8080
+    depends_on:
+      - postgres
+
+  postgres:
+    image: postgres:13.1
+    healthcheck:
+      test: [ "CMD", "pg_isready", "-q", "-d", "postgres", "-U", "root" ]
+      timeout: 45s
+      interval: 10s
+      retries: 10
+    restart: always
+    environment:
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=password
+      - APP_DB_USER=docker
+      - APP_DB_PASS=docker
+      - APP_DB_NAME=docker
+    volumes:
+      - ./db:/docker-entrypoint-initdb.d/
+      - goroutines-server-db:/var/lib/postgresql/data
+    ports:
+      - 5433:5432
+
+volumes:
+    goroutines-server-db:
+      external: false
